# momento-simple-lambda

./: Cargo.toml  README.md
src/: http_handler.rs  main.rs
