[package]
name = "momento-simple-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"

tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"

opentelemetry = "0.27.1"
opentelemetry-datadog = { version = "0.15.0", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "trace"] }
opentelemetry-http = { version = "0.27.0", features = ["reqwest"] }
opentelemetry-stdout = "0.27.0"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.39", features = ["serde"] }
lambda_runtime = { version = "0.13.0", features = ["opentelemetry"]}
tower = "0.5.2"
aws_lambda_events = { version = "0.16.0", features = ["apigw"]}